services/pacman/1.0.0/pacman-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pacman
  namespace: pacman
spec:
  rules:
    - host: pacman.cna-demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pacman
                port:
                  number: 80
